--- a/sitio_transportes/index.html
+++ b/sitio_transportes/index.html
@@ -60,7 +60,9 @@
                 </section>  
         </div>
     </main>
-    <footer>Diseñado por luciano sarzano</footer>
+    <footer>
+        <p>Diseñado por luciano sarzano</p> 
+    </footer>
 
 </body>
 
